--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -94,8 +94,11 @@
                         <div class="content">
                             <div style="color: #95c5cb;">{{selectedDropdownListDataItem | json}}</div>
 
-                            <div>
-                                <mona-filter-menu type="string" field="text" (apply)="onFilterMenuFilterApply($event)"></mona-filter-menu>
+                            <div style="display: flex;">
+                                <mona-filter-menu type="date" field="date" (apply)="onFilterMenuFilterApply($event)"></mona-filter-menu>
+                                <button monaButton (click)="openFilterPopup(filterPopupAnchor)" #filterPopupAnchor>
+                                    <fa-icon [icon]="filterIcon"></fa-icon>
+                                </button>
                             </div>
 
                             <div>
