--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
@@ -49,3 +49,11 @@ div.mona-grid-column-resizer {
     z-index: 1;
     right: 0;
 }
+
+div.mona-grid-column-wrap {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
