--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -37,7 +37,7 @@
                 <mona-tab [title]="'Grid Tab'" [selected]="true">
                     <ng-template monaTabContentTemplate>
                         <div style="padding: 40px;">
-                            <mona-grid style="height: 400px;"></mona-grid>
+                            <mona-grid [pageSize]="5" [pageSizeValues]="[5, 10, 15, 20]" style="height: 400px;"></mona-grid>
                         </div>
                     </ng-template>
                 </mona-tab>
@@ -111,7 +111,7 @@
                             <div>
                                 <mona-pager [skip]="pagerSkip" [total]="pagerTestData.length" (pageChange)="onPagerPageChange($event)" [pageInput]="true"
                                             type="numeric" [firstLast]="true" [previousNext]="true" [pageSizeValues]="[5,10,20,25,50,100]"
-                                            [pageSize]="pagerPageSize" (pageSizeChange)="onPagerPageSizeChange($event)" style="width: 850px;"></mona-pager>
+                                            [pageSize]="pagerPageSize" (pageSizeChange)="onPagerPageSizeChange($event)" style="width: 850px;" *ngIf="false"></mona-pager>
                             </div>
                             <div>
                                 <button monaButton [disabled]="false" [primary]="false" [selected]="false"
