--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
@@ -26,7 +26,7 @@ div.mona-grid {
         table-layout: fixed;
         width: 100%;
         & th {
-            padding: 8px 10px;
+            //padding: 8px 10px;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
@@ -60,6 +60,10 @@ div.mona-grid-column-wrap {
     cursor: pointer;
 }
 
-spna.mona-grid-column-title {
+span.mona-grid-column-title {
     flex: 1;
+    padding: 10px 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
