Initial grid column grouping try-outs

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -49,6 +49,9 @@
                                     </ng-template>
                                 </mona-grid-column>
                             </mona-grid>
+<!--                            <mona-grid [data]="gridProductData" [pageSize]="5" [pageSizeValues]="[5,10,15,20,25,50,100]" style="height: 400px">-->
+<!--                                <mona-grid-column *ngFor="let col of gridProductColumns" [field]="col.field" [title]="col.title"></mona-grid-column>-->
+<!--                            </mona-grid>-->
                         </div>
                     </ng-template>
                 </mona-tab>
