--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
@@ -42,3 +42,15 @@ table {
         }
     }
 }
+
+tr.mona-grid-grouping-row {
+    & > td:last-child {
+        font-weight: bolder;
+        padding: 0;
+    }
+}
+
+span.mona-grid-grouping-row-text {
+    font-weight: bolder;
+    margin-left: 8px;
+}
