--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -7,8 +7,9 @@
             <tbody>
             <tr *ngFor="let row of data">
                 <td *ngFor="let column of columns">
-                    <ng-container *ngIf="!column.cellTemplate">{{row[column.field]}}</ng-container>
-                    <ng-container [ngTemplateOutlet]="column.cellTemplate.templateRef ?? null" *ngIf="column.cellTemplate" [ngTemplateOutletContext]="{$implicit: row, column}"></ng-container>
+                    <ng-container *ngIf="!column.cellTemplate">{{row.data[column.field]}}</ng-container>
+                    <ng-container [ngTemplateOutlet]="column.cellTemplate.templateRef ?? null" *ngIf="column.cellTemplate"
+                                  [ngTemplateOutletContext]="{$implicit: row, column}"></ng-container>
                 </td>
             </tr>
             </tbody>
