--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -8,7 +8,7 @@
             </colgroup>
             <tbody>
                 <ng-container *ngIf="gridService.groupColumns.length === 0">
-                    <tr *ngFor="let row of data">
+                    <tr *ngFor="let row of data" (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected}">
                         <td *ngFor="let column of columns">
                             <ng-container *ngIf="!column.cellTemplate">{{row.data[column.field]}}</ng-container>
                             <ng-container [ngTemplateOutlet]="column.cellTemplate.templateRef ?? null" *ngIf="column.cellTemplate" [ngTemplateOutletContext]="{$implicit: row, column}"></ng-container>
@@ -20,7 +20,7 @@
                         <ng-container *ngIf="groupData|gridGroup:column:gridService.pageState.page as groupItem">
                             <ng-container *ngFor="let subGroup of groupItem">
                                 <tr class="mona-grid-grouping-row">
-                                    <td *ngFor="let groupCol of gridService.groupColumns|monaSlice:0:cx"></td>
+                                    <td *ngFor="let _ of gridService.groupColumns|monaSlice:0:cx"></td>
                                     <td [colSpan]="columns.length + gridService.groupColumns.length"
                                         *ngIf="subGroup.rows.length > 0">
                                         <button monaButton [flat]="true" style="width: 34px;" (click)="onGroupExpandChange(subGroup)">
@@ -37,7 +37,7 @@
                                     </ng-container>
                                 </ng-container>
                                 <ng-container *ngIf="depth===gridService.groupColumns.length-1 && !subGroup.collapsed">
-                                    <tr *ngFor="let row of subGroup.rows">
+                                    <tr *ngFor="let row of subGroup.rows" (click)="onGridRowClick($event, row)">
                                         <td *ngFor="let _ of gridService.groupColumns"></td>
                                         <td *ngFor="let column of columns">
                                             <ng-container *ngIf="!column.cellTemplate">{{row.data[column.field]}}</ng-container>
