Row selection options

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -37,7 +37,9 @@
                 <mona-tab [title]="'Grid Tab'" [selected]="true">
                     <ng-template monaTabContentTemplate>
                         <div style="padding: 40px;">
-                            <mona-grid [data]="gridOrderData" [pageSize]="5" [pageSizeValues]="[5, 10, 15, 20, 25, 50, 100]" style="height: 400px;">
+                            <mona-grid [data]="gridOrderData" [pageSize]="5" [pageSizeValues]="[5, 10, 15, 20, 25, 50, 100]" style="height: 400px;"
+                                       [groupable]="true"
+                                monaGridSelectable selectionKey="OrderID" [selectedKeys]="gridSelectionKeys" (selectedKeysChange)="onGridSelectionKeysChange($event)">
                                 <mona-grid-column *ngFor="let col of gridOrderColumns" [field]="col.field" [title]="col.title" [filterType]="col.filterType">
                                     <ng-template monaGridCellTemplate let-row>
                                         <ng-container *ngIf="col.field === 'OrderDate' || col.field==='ShippedDate'">
