--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
@@ -26,10 +26,10 @@
                             <div class="mona-grid-column-wrap">
                                 <span class="mona-grid-column-title" (click)="onColumnSort(column)">{{column.title}}</span>
                                 <div class="mona-grid-column-actions">
-                                    <span *ngIf="column.sortIndex != null">{{column.sortIndex}}</span>
+                                    <span *ngIf="gridService.sortableOptions.showIndices && column.sortIndex != null">{{column.sortIndex}}</span>
                                     <fa-icon [icon]="ascendingSortIcon" *ngIf="column.sortDirection==='asc'"></fa-icon>
                                     <fa-icon [icon]="descendingSortIcon" *ngIf="column.sortDirection==='desc'"></fa-icon>
-                                    <mona-grid-filter-menu [column]="column" [type]="column.filterType" (apply)="onColumnFilter(column, $event)"></mona-grid-filter-menu>
+                                    <mona-grid-filter-menu [column]="column" [type]="column.filterType" (apply)="onColumnFilter(column, $event)" *ngIf="filterable"></mona-grid-filter-menu>
                                 </div>
                             </div>
                             <span class="mona-grid-column-drop-hint" *ngIf="dropColumn === column && dragColumn && reorderable"
